Version 0.3
* added json_escape_string(), a function that escapes all non-printable ASCII characters
* rstring: renamed a bunch of functions in order to be more coherent
* fixed a bunch of memory leaks

Version 0.2
* added functions to identify and strip white spaces
* implemented all remaining json_new_* functions
* implemented json_format_string(), a basic formatting function
* rstring: switched from char to wchar_t, to better support Unicode
* switched the library to wchar_t

Version 0.1
* The starting point
