@@ -1,7 +1,7 @@
 AC_INIT(configure.in)
 
 AM_CONFIG_HEADER(config.h)
-AM_INIT_AUTOMAKE(json, 0.2)
+AM_INIT_AUTOMAKE(json, 0.3)
 AC_PROG_RANLIB
 
 AC_LANG_C
