@@ -1,4 +1,6 @@
 Version 0.3
+* Fixed the JSON parser's inability to parse escape character sequences contained in JSON strings
+* started replacing my pet rstrings with the wchar_t strings.
 * added json_escape_string(), a function that escapes all non-printable ASCII characters
 * rstring: renamed a bunch of functions in order to be more coherent
 * fixed a bunch of memory leaks
